--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@
 }
 
 body {
-    background-color: rgb(166, 49, 196);
+    background-color: rgb(233, 137, 255);
 }
 h1{
     text-align: center;
     border: solid ;
-    color: rgb(68, 1, 68);
-    background-color:rgb(68, 1, 68);
+    color: rgb(0, 0, 0);
+    background-color:rgb(0, 0, 0);
 }
 
 header {
@@ -28,8 +28,8 @@ div {
 }
 
 img {
-    width: 40%;
-    border-radius: 10%;
+    width: 50%;
+    border-radius: 20%;
     margin-top: 2%;
 }
 
@@ -42,4 +42,9 @@ ul {
     vertical-align: center;
     width: 20%;
     margin-right: 15%;
+}
+h2{
+
+text-align: center;
+color:rgb(95, 0, 71);
 }
