--- a/barbearia-frontend-main/produtos.css
+++ b/barbearia-frontend-main/produtos.css
@@ -19,5 +19,62 @@ h1{
 nav a{
     text-decoration: none;
     color: black;
-    font-weight: 800;
+    font-weight: bold;
+    font-size: 25px;
+}
+div a{
+    font-size: x-large;
+    text-decoration: none;
+}
+img{
+ width: 20%;
+}
+nav a:hover {
+    color: rgb(168, 29, 138);
+}
+
+nav .contact:hover {
+    color: black;
+    cursor: context-menu;
+}
+.produtos li {
+    display: inline-block;
+    width: 35%;
+    text-align: center;
+    vertical-align: top;
+    background-color: rgb(255, 255, 255);
+    margin: 5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border-color: black;
+    border-width: 2px;
+    border-style:solid;
+    border-radius: 20px 20px 20px 60px;
+}
+.produtos li:hover{
+    border-color: rgb(163, 92, 165);
+    cursor: pointer;
+}
+
+.produtos{
+    width: 940px;
+    margin:0 auto ;
+    
+
+}
+.produtos h2{
+    font-size: 25px ;
+    font-weight: bold;
+}
+.produto-preco{
+    font-size: 22px;
+    margin: 10px 0 0;
+}
+h2{
+size: 50px;
+}
+
+.vodase 
+    #video-player {
+        display: none;
 }
